Fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -84,19 +84,37 @@ body, input, select, textarea, button, .ui-btn {
     text-align: left;
 }
 
-#shopping .category > img{
-    margin: 0;
-    padding: 0;
-    width: 60px;
-    height: 60px;
-    float: left;
-}
-
 #shopping .category > span{
     margin: auto 0 auto 10px;
     line-height: 55px;
     float: left;
     font-size: 1.25em;
+}
+
+.request_btns{
+    width: 100%;
+    margin-top: 20px;
+    border-top: 1px solid #eee;
+}
+
+.ui-btn-2:first-child {
+    border-right: 1px solid #eee;
+}
+.request_btns .ui-btn-2, .request_btns .ui-btn-1 {
+    display: inline-block;
+    margin: 0;
+    padding: 5px 0;
+    text-align: center;
+    text-decoration: none;
+    color: #000000;
+}
+
+.request_btns .ui-btn-2{
+    width: 48%;
+}
+
+.request_btns .ui-btn-1 {
+    width: 98%;
 }
 
 .menu-items{
@@ -107,9 +125,10 @@ body, input, select, textarea, button, .ui-btn {
     position: relative;
     border-bottom: 1px solid #AAAAAA;
     border-radius: 5px;
+    margin: 10px 0;
 }
 
-#my_cart_items > table, #ordered_items > table{
+#my_cart_items > table, #ordered_items > table, #ordered_items_list > table{
     width: 100%;
 }
 
@@ -136,16 +155,16 @@ body, input, select, textarea, button, .ui-btn {
 .select-qty{
     margin: 0;
     padding: 0;
-    display: inline-block;
-    border: 1px solid #AAAAAA;
+    display: inline-flex;
+    border: 1px solid #E4E4E4;
 }
 
 .select-qty > input, .select-qty > a{
-    width: 30px;
+    width: 25px;
     text-align: center;
     margin: 0;
+    float: left;
     padding: 0;
-    display: inline-block;
 }
 
 .select-qty > a{
